k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-java-ingress
spec:
  rules:
    - host: docker-java.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-java-svc
                port:
                  number: 80
